Fixed this issue : Order history page - table is not responsive and unable to click on an item to view more details

--- a/public/web/css/custom.css
+++ b/public/web/css/custom.css
@@ -7414,7 +7414,19 @@ select:-webkit-autofill:focus {
         margin-bottom: 15px;
     }
     .orderHistory table {
+        width: 100%;
+        display: block;
         overflow-x: auto;
+        white-space: nowrap;
+    }
+    .table-responsive2 {
+        width: 100%;
+        display: block;
+        overflow-x: auto;
+        white-space: nowrap;
+    }
+    .payment-method {
+        margin-top: 15px;
     }
     .mobile-view-position {
         top: 0;
@@ -7455,6 +7467,9 @@ select:-webkit-autofill:focus {
     .fixed-width {
         margin: 0 auto;
         display: block;
+    }
+    .dashboard-Section {
+        margin-top: 80px;
     }
 }
 @media(min-width: 768px) and (max-width: 991px) {
@@ -7503,6 +7518,9 @@ select:-webkit-autofill:focus {
     }
     .prod-left-bar {
         margin-bottom: 25px;
+    }
+    .dashboard-Section {
+        margin-top: 80px;
     }
 }
 
